banking-app/base/istio/account-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: account
  namespace: banking-app
spec:
  host: account.banking-app.svc
  subsets:
  - name: v1
    labels:
      version: v1
