banking-app/base/istio/dashboard-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dashboard
  namespace: banking-app
spec:
  host: dashboard.banking-app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
