banking-app/base/istio/dashboard-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard
  namespace: banking-app
spec:
  hosts:
  - "*"
  gateways:
  - dashboard
  http:
  - route:
    - destination:
        host: dashboard.banking-app.svc.cluster.local
        port:
          number: 3000
        subset: v1
