banking-app/base/istio/profile-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: profile
  namespace: banking-app
spec:
  host: profile.banking-app.svc
  subsets:
  - name: v1
    labels:
      version: v1
